<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
      
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
        
     <!-- Topo Inicio -->
     <LinearLayout
        android:id="@+id/login_topo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"            
        android:orientation="vertical" 
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/login_lbNomeEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_nomeEmpresa" 
            android:layout_gravity="center_horizontal"/>		
        <TextView
            android:id="@+id/login_lbVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_versao_Sys" 
            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
     <!-- Topo Fim -->
     
     <!-- Corpo inicio -->
     <LinearLayout
         android:id="@+id/login_corpo"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
         android:padding="10dip"
         android:layout_marginTop="20dp" 
         android:layout_below="@id/login_topo">       
         
         <EditText
                android:id="@+id/login_txUsuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"                
                android:hint="@string/login_txUsuario"
                android:inputType="text" />
         
         <EditText
                android:id="@+id/login_txSenha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"                
                android:hint="@string/login_txSenha"
                android:inputType="textPassword" />                            

            <Button
                android:id="@+id/login_btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_btLogin" />
     </LinearLayout>
     <!-- Corpo fim -->
    </RelativeLayout>
        
</ScrollView>